syntax = "proto3";
option csharp_namespace = "OzonEdu.MerchandiseService.Grpc";
package MerchandiseService;

import "google/protobuf/empty.proto";

service MerchandiseServiceGrpc {
	rpc GetAllMerchandiseITems(GetAllMerchandiseItemsRequest) returns (GetAllMerchandiseItemsResponse);
	rpc GetAllMerchandiseITemsV2(google.protobuf.Empty) returns (GetAllMerchandiseItemsResponse);
	rpc GetOneMerchaniseItem(GetOneMerchaniseItemRequest) returns (GetOneMerchaniseItemResponse);
}


message GetAllMerchandiseItemsRequest{
}

message GetOneMerchaniseItemRequest{
	int64 item_id = 1;
}

message GetOneMerchaniseItemResponse{
	GetAllMerchandiseItemsResponseUnit merch_item = 1;
}

message GetAllMerchandiseItemsResponse{
	repeated GetAllMerchandiseItemsResponseUnit merch_items = 1;
}

message GetAllMerchandiseItemsResponseUnit{
	int64 item_id = 1;
	string item_name = 2;
	int32 item_quantity = 3;
}